# PyCap

./: .coveragerc  .env.example  .gitignore  .pylintrc  .travis.yml  404.html  API_Changelog.rst  CONTRIBUTING.md  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  codecov.yml  dev-requirements.in  dev-requirements.txt  fabfile.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pycap.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: release.md  unexpected-behavior-issue-template.md
.github/workflows/: build_docs.yml  ci-tests.yml  ci.yml  generate_docs.yml
api_reference/arms/: index.html
api_reference/data_access_groups/: index.html
api_reference/events/: index.html
api_reference/field_names/: index.html
api_reference/file_repository/: index.html
api_reference/files/: index.html
api_reference/instruments/: index.html
api_reference/logging/: index.html
api_reference/metadata/: index.html
api_reference/project/: index.html
api_reference/project_info/: index.html
api_reference/records/: index.html
api_reference/repeating/: index.html
api_reference/reports/: index.html
api_reference/surveys/: index.html
api_reference/user_roles/: index.html
api_reference/users/: index.html
api_reference/version/: index.html
docs/: Makefile  api.rst  conf.py  contributing.rst  deep.rst  index.md  index.rst  install.rst  intro.rst  quickstart.md  using-in-app-or-package.md
docs/api_reference/: arms.md  data_access_groups.md  events.md  field_names.md  file_repository.md  files.md  instruments.md  logging.md  metadata.md  project.md  project_info.md  records.md  repeating.md  reports.md  surveys.md  user_roles.md  users.md  version.md
examples/: export.py  filter.py  import.py
old_docs/: Makefile  api.rst  api_changelog.rst  conf.py  deep.rst  make.bat  quickstart.rst
quickstart/: index.html
redcap/: __init__.py  conftest.py  coroutine.py  experiement.py  project.py  query.py  rc.py  request.py  version.py
redcap/methods/: __init__.py  arms.py  base.py  data_access_groups.py  events.py  field_names.py  file_repository.py  files.py  instruments.py  logging.py  metadata.py  project_info.py  records.py  repeating.py  reports.py  surveys.py  user_roles.py  users.py  version.py
redcap_api_examples/: Instructions.txt  RestCallRequest.php  export_metadata.php  export_records.php  file_delete.php  file_export.php  file_import.php  import_records.php
scripts/: create_test_projects.py
search/: search_index.json
test/: conftest.py  data.txt  test_package.py  test_project.py  test_query.py  test_request.py
test/integration/: conftest.py  test_simple_project.py
test/unit/: callback_utils.py  conftest.py  test_long_project.py  test_project.py  test_project_pytest.py  test_request.py  test_simple_project.py  test_ssl_project.py  test_survey_project.py
tests/: test_query.py
tests/data/: doctest_project.xml  test_long_project.xml  test_simple_project.xml
tests/integration/: conftest.py  test_long_project.py  test_simple_project.py
tests/unit/: callback_utils.py  conftest.py  test_long_project.py  (+4 more)
using-in-app-or-package/: index.html
(+15 files in other folders)
