[tool.poetry]
name = "PyCap"
version = "2.0.0-alpha.1"
description = "PyCap: Python interface to REDCap"
authors = ["Scott Burns <scott.s.burns@gmail.com>"]
maintainers = ["Paul Wildenhain <pwildenhain@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "http://redcap-tools.github.io/PyCap/"
repository = "https://github.com/redcap-tools/PyCap"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
]
packages = [
    { include = "redcap" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.20"
semantic-version = "^2.8.5"
pandas = {version = "^1.3.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-black = {version = "^0.3.12", allow-prereleases = true}
pytest-pylint = "^0.18.0"
responses = "^0.14.0"
pytest-mock = "^3.6.1"
types-requests = "^2.26.1"
pandas-stubs = "^1.2.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.3"
mkdocstrings = "^0.17.0"
pytest-doctestplus = "^0.11.2"
typing-extensions = "^4.0.1"

[tool.poetry.extras]
data_science = ["pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
