[tool.poetry]
name = "PyCap"
version = "2.6.0"
description = "PyCap: Python interface to REDCap"
authors = ["Scott Burns <scott.s.burns@gmail.com>"]
maintainers = ["Paul Wildenhain <pwildenhain@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "http://redcap-tools.github.io/PyCap/"
repository = "https://github.com/redcap-tools/PyCap"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
]
packages = [
    { include = "redcap" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.20"
semantic-version = "^2.8.5"
pandas = {version = "^2.0.0", optional = true}

[tool.poetry.extras]
data_science = ["pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-black = "^0.3.12"
pytest-mypy = "^0.10.3"
pytest-pylint = "^0.20.0"
responses = "^0.14.0"
pytest-mock = "^3.6.1"
types-requests = "^2.26.1"
pandas-stubs = "^1.2.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.3"
mkdocstrings = "^0.17.0"
pytest-doctestplus = "^0.11.2"
Jinja2 = "~3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
